# freecell-solitaire-solver

./: .clinerules  .gitignore  Cargo.toml  README.md  WORKSPACE_GUIDE.md  output1.txt  output10.txt  output11.txt  output11982-1000.txt  output11982-5000.txt  output11982-6000.txt  output11982.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output20.txt  output21.txt  output22.txt  output23.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
game-engine/: Cargo.toml
game-engine/memory-bank/: activeContext.md  gameRules.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
game-engine/src/: action.rs  card.rs  engine.rs  foundations.rs  freecells.rs  game_state.rs  generation.rs  lib.rs  location.rs  move.rs  packed_game_state.rs  rules.rs  tableau.rs
game-engine/src/game_state/: error.rs  execution.rs  heuristics.rs  mod.rs  moves.rs  validation.rs
solver/: Cargo.toml  README.MD
solver/memory-bank/: activeContext.md  performanceMetrics.md  productContext.md  progress.md  projectbrief.md  strategyGuide.md  systemPatterns.md  techContext.md
solver/src/: game_prep.rs  harness.rs  lib.rs  main.rs  packed_state.rs  strategies.rs
solver/src/strategies/: README.MD  mod.rs  registry.rs
solver/src/strategies/strat1/: mod.rs  solve.rs
solver/src/strategies/strat10/: solve.rs
solver/src/strategies/strat11/: solve.rs
solver/src/strategies/strat12/: solve.rs
solver/src/strategies/strat13/: solve.rs
solver/src/strategies/strat2/: mod.rs  solve.rs
solver/src/strategies/strat3/: mod.rs  solve.rs
solver/src/strategies/strat4/: mod.rs  solve.rs
solver/src/strategies/strat5/: mod.rs  solve.rs
solver/src/strategies/strat6/: solve.rs
solver/src/strategies/strat7/: solve.rs
solver/src/strategies/strat8/: README.md  solve.rs
(+41 files in other folders)
