[package]
name = "freecell-game-engine"
version = "0.1.0"
edition = "2021"
description = "Core game engine for FreeCell solitaire game logic"
license = "MIT OR Apache-2.0"

[lib]
name = "freecell_game_engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = { workspace = true }
