[package]
name = "freecell-solver"
version = "0.1.0"
edition = "2021"
description = "FreeCell solitaire solver that finds solutions to games"

[[bin]]
name = "solver"
path = "src/main.rs"

[dependencies]
freecell-game-engine = { path = "../game-engine" }
lru = "0.12"
mimalloc = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
priority-queue = "2.0"

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

# Profile-guided optimization
[profile.pgo]
inherits = "release" 
opt-level = 3
lto = "fat"
codegen-units = 1
